eliminacion de coma

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <p></p>
                     <h2>Fidelidad, jovialidad, competencia y dedicación</h2> 
                     <p> Cual es tú duda? </p>
-                    <a href="#">Leer más</a>
+                    <a href="#">Leer más</a> 
                 </div>
             </section>
             
@@ -62,7 +62,7 @@
                      </article>
                      <article>
                          <img src="img/images4.jpg">
-                         <h4>Optimiza el parque informático, que</h4>
+                         <h4>Optimiza el parque informático que</h4>
                          <h4>posees, no lo desperdicies</h4>
                      </article>
                  </div>
