--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
             
             <section id="bienvenidos">
                 <h2>BIENVENIDOS A NUESTRO ESPACIO</h2><br>
-                <p>FJyCD te da la bienvenida y agradece tu visita. Nuestro principal objetivo, se orienta brindarte un asesoramiento acertado para lograr tu satisfacción. 
+                <p>FJyCD te da la bienvenida y agradece tu visita. Nuestro objetivo principal se orienta a lograr tu satisfacción, brindándote un asesoramiento acertado. 
                 </p>
             </section>
              
               <section id="blog">
                  <h2>Nuestros servicios</h2><br>
-                 <p>Los retos que se presentan en la actualidad, están ligados a la implemetanción tecnológica en todos los campos y tipos de negocio, para ello FJyCD con mas de 20 años de experiencia en el ambito de la informática y las comunicaciones, te ofrece sus servicios de asesoramiento personalizado, para que tu negocio cuente con los equipos y sistemas informáticos mas apropiados. 
+                 <p>Los retos que se presentan en la actualidad, están ligados a la implemetanción tecnológica en todos los campos y tipos de negocio, para ello FJyCD con más de 20 años de experiencia en el ámbito de la informática y las comunicaciones, te ofrece sus servicios de asesoramiento personalizado, para que tu negocio cuente con los equipos y sistemas informáticos más apropiados. 
                  </p>
                  <div class="contenedor">
                      <article>
